added types, removed commits and planning file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "lib": ["dom", "esnext"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
